--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,17 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.layout {
+  width: 100%;
+  height: 100%;
+  background-image: url("bg.jpg");
+  background-size: cover;
+}
+
+.my-input {
+  color: white;
+}
+
+
+
